<resources>
    <string name="app_name">Kotlin Android Template</string>
    <string name="title">This is just a template</string>
    <string name="description">You can compute a factorial using the library-kotlin module. The result will be also shown in a notification using the library-android module.</string>
    <string name="factorial_hint">Insert a number to compute his factorial</string>
    <string name="compute">Compute</string>
    <string name="notification_title">The Result is:</string>
    <string name="login_desc">Log in to your \nexisting account.</string>
    <string name="ask_for_sign_up">Don\'t have an account? sign up.</string>
    <string name="email_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_via">or login via</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_desc">Sign up for a \nnew account.</string>
    <string name="ask_for_sign_in">Already have an account? sign in.</string>
    <string name="sign_up_via">or signup via</string>
    <string name="sign_up">Sign Up</string>
    <string name="more_info_desc">We just need \nsome more\ninformation.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
