<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_vertical_start_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_vertical_end_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/close_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_close_black"
            app:layout_constraintEnd_toStartOf="@+id/login_vertical_end_gl"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/login_vertical_start_gl"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/more_info_desc_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/more_info_desc"
            android:textColor="@color/grays_01_dark_01_100"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/login_vertical_end_gl"
            app:layout_constraintStart_toStartOf="@id/login_vertical_start_gl"
            app:layout_constraintTop_toBottomOf="@+id/close_ic" />


        <ImageView
            android:id="@+id/user_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/circled_shape_gray"
            android:src="@drawable/ic_camera"
            android:scaleType="center"
            app:layout_constraintEnd_toStartOf="@+id/login_vertical_end_gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more_info_desc_tv" />


        <TextView
            android:id="@+id/first_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/first_name"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/login_vertical_end_gl"
            app:layout_constraintStart_toStartOf="@id/login_vertical_start_gl"
            app:layout_constraintTop_toBottomOf="@+id/user_img" />

        <EditText
            android:id="@+id/first_name_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColorHint="@color/off_white"
            android:textColor="@color/off_white"
            android:textSize="18sp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:background="@drawable/line_bottom_gray"
            app:layout_constraintEnd_toStartOf="@+id/login_vertical_end_gl"
            app:layout_constraintStart_toStartOf="@id/login_vertical_start_gl"
            app:layout_constraintTop_toBottomOf="@+id/first_name_tv" />

        <TextView
            android:id="@+id/last_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/last_name"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/login_vertical_end_gl"
            app:layout_constraintStart_toStartOf="@id/login_vertical_start_gl"
            app:layout_constraintTop_toBottomOf="@+id/first_name_edt" />

        <EditText
            android:id="@+id/last_name_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColorHint="@color/off_white"
            android:textColor="@color/off_white"
            android:textSize="18sp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:background="@drawable/line_bottom_gray"
            app:layout_constraintEnd_toStartOf="@+id/login_vertical_end_gl"
            app:layout_constraintStart_toStartOf="@id/login_vertical_start_gl"
            app:layout_constraintTop_toBottomOf="@+id/last_name_tv" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_shape_color_accent"
            android:drawableEnd="@drawable/ic_arrow_forward_white"
            android:drawablePadding="8dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="16dp"
            android:paddingBottom="20dp"
            android:text="@string/sign_up"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/off_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/login_vertical_end_gl"
            app:layout_constraintStart_toStartOf="@id/login_vertical_start_gl"
            app:layout_constraintTop_toBottomOf="@+id/last_name_edt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
